MLPAB-397: How should the attorneys make decisions (#192)

--- a/app/web/template/layout/radios.gohtml
+++ b/app/web/template/layout/radios.gohtml
@@ -2,7 +2,14 @@
   <div class="govuk-radios {{ if index .top.Errors .name }}govuk-radios--error{{ end }}" data-module="govuk-radios">
     {{ range $i, $e := .items }}
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="f-{{ fieldID $.name $i }}" name="{{ $.name }}" type="radio" value="{{ $e.value }}" {{ if eq $.value $e.value }}checked{{ end }} {{ if $e.hint }}aria-describedby="{{ fieldID $.name $i }}-item-hint"{{ end }}>
+        <input class="govuk-radios__input"
+               id="f-{{ fieldID $.name $i }}"
+               name="{{ $.name }}"
+               type="radio"
+               value="{{ $e.value }}"
+               {{ if eq $.value $e.value }}checked{{ end }}
+               {{ if $e.hint }}aria-describedby="{{ fieldID $.name $i }}-item-hint"{{ end }}
+        >
         <label class="govuk-label govuk-radios__label" for="f-{{ $.name }}{{ if ne $i 0 }}-{{ inc $i }}{{ end }}">
           {{ tr $.top.App $e.label }}
         </label>
