--- a/app/web/template/want_replacement_attorneys.gohtml
+++ b/app/web/template/want_replacement_attorneys.gohtml
@@ -7,53 +7,17 @@
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
           <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-6">{{ tr .App "wantReplacementAttorneys" }}</h1>
         </legend>
-
-          {{ .Lpa.DecisionsType }}
-
           {{ trHtml .App "wantReplacementAttorneysContent" }}
 
         <div>
           {{ if eq .Lpa.DecisionsType "jointly" }}
-            <div class="govuk-warning-text">
-              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-              <strong class="govuk-warning-text__text">
-                <span class="govuk-warning-text__assistive">Warning</span>
-                Replacement attorneys are an important backup when attorneys are appointed to act jointly.
-              </strong>
-            </div>
-
-            <p class="govuk-body">
-              If the donor does not appoint any replacement attorneys and one of the original attorneys dies or can no longer act, the LPA will stop working.
-            </p>
-
-            <p class="govuk-body">
-              If the donor does appoint replacement attorneys and one of the original attorneys dies or can no longer act:
-            </p>
-
-            <ul class="govuk-list govuk-list--bullet">
-              <li>ALL the original attorneys will be replaced by the replacement attorneys, unless the donor states otherwise in their instructions</li>
-              <li>the original attorneys will not be able to make any decisions on the donor's behalf anymore</li>
-            </ul>
+            {{ template "warning" (warning .App "jointlyReplacementWarning") }}
+            {{ trHtml .App "jointlyReplacementWarningContent" }}
           {{ end }}
 
           {{ if eq .Lpa.DecisionsType "mixed" }}
-            <div class="govuk-warning-text">
-              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-              <strong class="govuk-warning-text__text">
-                <span class="govuk-warning-text__assistive">Warning</span>
-                The donor appointed their attorneys to act jointly for some decisions, and jointly and severally for others.
-              </strong>
-            </div>
-
-            <p class="govuk-body">
-              This means that if an original attorney dies or can no longer act:
-            </p>
-
-            <ul class="govuk-list govuk-list--bullet">
-              <li>all the replacement attorneys step in and take over making the joint decisions</li>
-              <li>the remaining original attorneys will not be able to make the joint decisions anymore, unless the donor states otherwise in their instructions</li>
-              <li>the replacement and remaining original attorneys can make all other decisions together or individually</li>
-            </ul>
+            {{ template "warning" (warning .App "mixedReplacementWarning") }}
+            {{ trHtml .App "mixedReplacementWarningContent" }}
           {{ end }}
 
 
