MLPAB-402: Add multiple replacement attorneys (#198)

--- a/app/web/template/task_list.gohtml
+++ b/app/web/template/task_list.gohtml
@@ -24,14 +24,14 @@
                         {{ tr $.App .Name }}
                       </a>
                     </span>
-                    <strong class="govuk-tag app-task-list__tag">{{ tr $.App "completed" }}</strong>
+                    <strong class="govuk-tag app-task-list__tag">{{ tr $.App "completed" }} {{if gt .Count 0}}({{ .Count }}){{ end }}</strong>
                   {{ else if .InProgress }}
                     <span class="app-task-list__task-name">
                       <a href="{{ link $.App .Path }}" class="govuk-link govuk-link--no-visited-state">
                         {{ tr $.App .Name }}
                       </a>
                     </span>
-                    <strong class="govuk-tag app-task-list__tag govuk-tag--blue">{{ tr $.App "inProgress" }}</strong>
+                    <strong class="govuk-tag app-task-list__tag govuk-tag--blue">{{ tr $.App "inProgress" }} {{if gt .Count 0}}({{ .Count }}){{ end }}</strong>
                   {{ else if .Disabled }}
                     <span class="app-task-list__task-name govuk-hint govuk-!-margin-bottom-0">
                       {{ tr $.App .Name }}
