--- a/app/web/template/choose_replacement_attorneys.gohtml
+++ b/app/web/template/choose_replacement_attorneys.gohtml
@@ -3,7 +3,37 @@
 {{ define "main" }}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-           Not done yet
+            <form novalidate method="post">
+                <div class="govuk-form-group">
+                    <fieldset class="govuk-fieldset">
+                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+                            <h1 class="govuk-fieldset__heading">{{ tr .App "whoWouldYouLikeToBeTheReplacementAttorneys" }}</h1>
+                        </legend>
+
+                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">{{ tr .App "replacementAttorney" }}</legend>
+
+                        {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
+                        {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
+                        {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
+
+                        {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
+
+                        {{ if .DobWarning }}
+                            <div class="govuk-warning-text">
+                                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                                <strong class="govuk-warning-text__text">
+                                    <span class="govuk-warning-text__assistive">Warning</span>
+                                    {{ tr .App .DobWarning }}
+                                </strong>
+                            </div>
+
+                            <input type="hidden" name="ignore-warning" value="{{ .DobWarning }}" />
+                        {{ end }}
+
+                        {{ template "continue-button" . }}
+                    </fieldset>
+                </div>
+            </form>
         </div>
     </div>
 {{ end }}
