--- a/app/web/template/choose_replacement_attorneys_summary.gohtml
+++ b/app/web/template/choose_replacement_attorneys_summary.gohtml
@@ -5,30 +5,7 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-xl">{{ trCount .App "replacementAttorneysAdded" (len .Lpa.ReplacementAttorneys) }}</h1>
 
-            <dl class="govuk-summary-list">
-                {{range .Lpa.ReplacementAttorneys}}
-                    <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            {{ .FirstNames }} {{ .LastName }}<br>
-                            <span class="govuk-body-s">{{ formatDate .DateOfBirth }}</span><br>
-                            <a class="govuk-link govuk-body-s" href="{{ link $.App $.ReplacementAttorneyDetailsPath }}?id={{ .ID }}&from={{ $.App.Page }}">
-                                {{ trFormatHtml $.App "changeDetailsLink" "FirstNames" .FirstNames "LastName" .LastName }}
-                            </a>
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            {{ .Address.Line1 }}, {{ .Address.Postcode }}<br>
-                            <a class="govuk-link govuk-body-s" href="{{ link $.App $.ReplacementAttorneyAddressPath }}?id={{ .ID }}&from={{ $.App.Page }}">
-                                {{ trFormatHtml $.App "changeAddressLink" "FirstNames" .FirstNames "LastName" .LastName }}
-                            </a>
-                        </dd>
-                        <dd class="govuk-summary-list__actions">
-                            <a class="govuk-link govuk-body-s" href="{{ link $.App $.RemoveReplacementAttorneyPath }}?id={{ .ID }}">
-                                {{ trFormatHtml $.App "removeLink" "FirstNames" .FirstNames "LastName" .LastName }}
-                            </a>
-                        </dd>
-                    </div>
-                {{end}}
-            </dl>
+            {{ template "attorney-summary" (listAttorneys .Lpa.ReplacementAttorneys .App .ReplacementAttorneyDetailsPath .ReplacementAttorneyAddressPath .RemoveReplacementAttorneyPath) }}
 
             <form novalidate method="post">
                 <div class="govuk-form-group">
