--- a/app/web/template/layout/attorney-summary.gohtml
+++ b/app/web/template/layout/attorney-summary.gohtml
@@ -12,7 +12,7 @@
                     {{ $a.FirstNames }} {{ $a.LastName }}
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link $.App $.DetailsPath }}?id={{ $a.ID }}&from={{ $.App.Page }}&#f-first-names">
+                    <a class="govuk-link" href="{{ link $.App $.DetailsPath }}?id={{ $a.ID }}&from={{ $.App.Page }}#f-first-names">
                         {{ trFormatHtml $.App "changeNameLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
                     </a>
                 </dd>
@@ -25,20 +25,20 @@
                     {{ formatDate $a.DateOfBirth }}
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link $.App $.DetailsPath }}?id={{ $a.ID }}&from={{ $.App.Page }}&#f-date-of-birth">
+                    <a class="govuk-link" href="{{ link $.App $.DetailsPath }}?id={{ $a.ID }}&from={{ $.App.Page }}#f-date-of-birth">
                         {{ trFormatHtml $.App "changeDOBLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
                     </a>
                 </dd>
             </div>
-            <div class="govuk-summary-list__row govuk-!-padding-top-1" id="email-{{ $attorneyNumber }}">
-                <dt class="govuk-summary-list__key govuk-!-padding-top-1 ">
+            <div class="govuk-summary-list__row" id="email-{{ $attorneyNumber }}">
+                <dt class="govuk-summary-list__key ">
                     {{ tr $.App "email" }}
                 </dt>
-                <dd class="govuk-summary-list__value govuk-!-padding-top-1">
+                <dd class="govuk-summary-list__value">
                     {{ $a.Email }}
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link $.App $.DetailsPath }}?id={{ $a.ID }}&from={{ $.App.Page }}&#f-email">
+                    <a class="govuk-link" href="{{ link $.App $.DetailsPath }}?id={{ $a.ID }}&from={{ $.App.Page }}#f-email">
                         {{ trFormatHtml $.App "changeEmailLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
                     </a>
                 </dd>
@@ -54,7 +54,7 @@
                     {{ $a.Address.Postcode }}
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link $.App $.AddressPath }}?id={{ $a.ID }}&from={{ $.App.Page }}&#f-address-line-1">
+                    <a class="govuk-link" href="{{ link $.App $.AddressPath }}?id={{ $a.ID }}&from={{ $.App.Page }}#f-address-line-1">
                         {{ trFormatHtml $.App "changeAddressLink" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
                     </a>
                 </dd>
