--- a/app/web/template/choose_attorneys_summary.gohtml
+++ b/app/web/template/choose_attorneys_summary.gohtml
@@ -5,30 +5,7 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">{{ trCount .App "attorneysAdded" (len .Lpa.Attorneys) }}</h1>
 
-        <dl class="govuk-summary-list">
-        {{range .Lpa.Attorneys}}
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    {{ .FirstNames }} {{ .LastName }}<br>
-                    <span class="govuk-body-s">{{ formatDate .DateOfBirth }}</span><br>
-                    <a class="govuk-link govuk-body-s" href="{{ link $.App $.AttorneyDetailsPath }}?id={{ .ID }}&from={{ $.App.Page }}">
-                        {{ trFormatHtml $.App "changeDetailsLink" "FirstNames" .FirstNames "LastName" .LastName }}
-                    </a>
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    {{ .Address.Line1 }}, {{ .Address.Postcode }}<br>
-                    <a class="govuk-link govuk-body-s" href="{{ link $.App $.AttorneyAddressPath }}?id={{ .ID }}&from={{ $.App.Page }}">
-                        {{ trFormatHtml $.App "changeAddressLink" "FirstNames" .FirstNames "LastName" .LastName }}
-                    </a>
-                </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-body-s" href="{{ link $.App $.RemoveAttorneyPath }}?id={{ .ID }}">
-                        {{ trFormatHtml $.App "removeLink" "FirstNames" .FirstNames "LastName" .LastName }}
-                    </a>
-                </dd>
-            </div>
-        {{end}}
-        </dl>
+        {{ template "attorney-summary" (listAttorneys .Lpa.Attorneys .App .AttorneyDetailsPath .AttorneyAddressPath .RemoveAttorneyPath) }}
 
         <form novalidate method="post">
             <div class="govuk-form-group">
