--- a/app/web/template/layout/page.gohtml
+++ b/app/web/template/layout/page.gohtml
@@ -14,6 +14,11 @@
       <link rel="apple-touch-icon" sizes="152x152" href="/static/assets/images/govuk-apple-touch-icon-152x152.png" >
       <link rel="apple-touch-icon" href="/static/assets/images/govuk-apple-touch-icon.png" >
       <link href="/static/stylesheets/all.css" rel="stylesheet">
+      <meta name="rum-guest-role-arn" content="{{ .App.RumConfig.GuestRoleArn }}" />
+      <meta name="rum-endpoint" content="{{ .App.RumConfig.Endpoint }}" />
+      <meta name="rum-application-region" content="{{ .App.RumConfig.ApplicationRegion }}" />
+      <meta name="rum-identity-pool-id" content="{{ .App.RumConfig.IdentityPoolID }}" />
+      <meta name="rum-application-id" content="{{ .App.RumConfig.ApplicationID }}" />
     </head>
 
     <body class="govuk-template__body app-body-class">
