replace hardcoded attorney with actual attorneys on who do you want to be CP

--- a/app/web/template/who_do_you_want_to_be_certificate_provider_guidance.gohtml
+++ b/app/web/template/who_do_you_want_to_be_certificate_provider_guidance.gohtml
@@ -3,7 +3,7 @@
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      {{ trHtml .App "whoDoYouWantToBeCertificateProviderGuidance" }}
+      {{ trFormatHtml .App "whoDoYouWantToBeCertificateProviderGuidance" "AttorneysFirstNames" .Lpa.AttorneysFirstNames }}
 
       <form novalidate method="post">
         <div class="govuk-button-group">
