Add preconnect tag for rum endpoint

--- a/app/web/template/layout/page.gohtml
+++ b/app/web/template/layout/page.gohtml
@@ -6,6 +6,7 @@
       <title>{{ if .Errors }}Error: {{ end }}{{ tr .App "serviceName" }}</title>
       <link rel="preload" href="/static/stylesheets/all.css" as="style">
       <link rel="preload" href="/static/javascript/main.js" as="script">
+      <link rel="preconnect" href="//dataplane.rum.eu-west-1.amazonaws.com">
       <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
       <meta name="theme-color" content="blue">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
