--- a/app/web/template/layout/lpa-decisions.gohtml
+++ b/app/web/template/layout/lpa-decisions.gohtml
@@ -37,19 +37,21 @@
             </dd>
         </div>
 
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                {{ tr .App "howTheAttorneysMustWorkTogether" }}
-            </dt>
-            <dd class="govuk-summary-list__value">
-                {{ tr .App .Lpa.HowAttorneysMakeDecisions }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-                <a class="govuk-link" href="{{ link .App .HowAttorneysMakeDecisionsPath }}">
-                    {{ tr .App "change" }}<span class="govuk-visually-hidden">{{ .Lpa.HowAttorneysMakeDecisionsDetails }}</span>
-                </a>
-            </dd>
-        </div>
+        {{ if gt 1 (len .Lpa.Attorneys) }}
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    {{ tr .App "howTheAttorneysMustWorkTogether" }}
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    {{ tr .App .Lpa.HowAttorneysMakeDecisions }}
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link" href="{{ link .App .HowAttorneysMakeDecisionsPath }}">
+                        {{ tr .App "change" }}<span class="govuk-visually-hidden">{{ .Lpa.HowAttorneysMakeDecisionsDetails }}</span>
+                    </a>
+                </dd>
+            </div>
+        {{ end }}
 
         <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
